@@ -14,6 +14,9 @@ RENAMED - A function/class has been renamed.
 REMOVED - A function/class has been removed.
 ======================================================================================================
 
+Forthcoming
+- Added Taiwan region code for wireless devices
+
 64.3.0 - 2022-06-03
 - Added support for G-Link-200 6522-6001 (custom default configuration)
 - Added support for MIP commands:
